--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>Meme review</title>
 </head>
 <body>
-<h>Welcome to the Meme Review site! Here we collect all the BEST and KILLED memes from pewds' Meme Review.</h>
+<h1>Welcome to the Meme Review site! Here we collect all the BEST and KILLED memes from pewds' Meme Review.</h1>
 </body>
 </html>
